# panopaea

./: .travis.yml  Cargo.toml  README.md
examples/: Cargo.toml  advect.rs  dec_fluid.rs  ocean.rs  particles.rs  particles_pbd.rs  particles_wcsph.rs  stable_fluids.rs  wavelet.rs
examples/data/: particles.fs.glsl  particles.gs.glsl  particles.vs.glsl
examples/util/: export_png.rs
matlab/: img2velocity_field.m  velocity_field.m
panopaea/: Cargo.toml
panopaea/src/: lib.rs  solver.rs  sparse.rs
panopaea/src/dec/: grid.rs  manifold.rs
panopaea/src/domain/: mesh.rs
panopaea/src/math/: integration.rs  interp.rs  linear_view.rs  mod.rs  vector_n.rs
panopaea/src/math/wavelet/: mod.rs  spline.rs
panopaea/src/ocean/: empirical.rs  mod.rs
panopaea/src/pbd/: constraint.rs  mod.rs  property.rs
panopaea/src/sph/: grid.rs  mod.rs  neighbor.rs  wcsph.rs
panopaea_python/: Cargo.toml
panopaea_utils/: Cargo.toml
panopaea_utils/src/: imgproc.rs  lib.rs  png.rs
src/: cg.rs  dec.rs  grid.rs  grid_old.rs  lib.rs  macros.rs  math.rs  particle.rs  pcg.rs  scene.rs  solver.rs  solver_old.rs  sparse.rs
src/dec/: grid.rs  manifold.rs  mod.rs
src/domain/: grid.rs  mod.rs
src/math/: interp.rs  mod.rs  vector.rs  vector_n.rs
src/ocean/: empirical.rs
src/pbd/: mod.rs  property.rs
src/sph/: grid.rs  kernel.rs  mod.rs  wcsph.rs
src/wavelet/: haar.rs  mod.rs  spline.rs
util/: Cargo.toml  export_png.rs  lib.rs
util/src/: png.rs
