[package]
name = "panopaea"
version = "0.1.0"
authors = ["msiglreith <msiglreith@users.noreply.github.com>"]

[dependencies]
cgmath = "0.11.0"
num = "0.1.35"
stopwatch = "0.0.7"
ndarray = "0.7.2"
ndarray-parallel = "0.1"
generic-array = "0.6"

[dev-dependencies]
panopaea-util = { path = "util" }
image = "0.10.3"

[workspace]
members = ["util"]
