[package]
name = "panopaea-examples"
version = "0.1.0"
authors = ["msiglreith <msiglreith@users.noreply.github.com>"]
workspace = ".."

[dependencies]
panopaea = { path = "../panopaea" }
panopaea_utils = { path = "../panopaea_utils" }
stopwatch = "0.0.7"
nalgebra = "0.11"
ndarray = "0.10"
cgmath = "0.12"
gfx = "0.16"
gfx_window_glutin = "0.17"
glutin = "0.9"
generic-array = "0.6"
rayon = "0.8"

[[example]]
name = "ocean"
path = "ocean.rs"

[[example]]
name = "dec-fluid"
path = "dec_fluid.rs"

[[example]]
name = "pbf"
path = "particles_pbd.rs"
